docs: update ARCHITECTURE/TESTING for DB isolation and PL definitions; feat: trade_details overview shows gross/net with fees breakdown; core: add gross/net profit fields and analysis stats; tests: ensure testing env uses isolated DB; chore: CHANGELOG for 2025-08-11

--- a/reports/index.html
+++ b/reports/index.html
@@ -15,10 +15,10 @@
       <tr><th>测试类型</th><th>行覆盖率</th><th>分支覆盖率</th><th>结果</th><th>HTML报告</th></tr>
     </thead>
     <tbody>
-      <tr><td>单元测试</td><td>88.7%</td><td>76.1%</td><td>错误: Command '['C:\\Users\\xqu\\AppData\\Local\\Programs\\Python\\Python311\\python3.exe', '-m', 'coverage', 'run', '--rcfile', 'C:\\xing\\mirror\\.coveragerc', '--branch', '--source', 'services,models,utils', '-m', 'unittest', 'discover', '-s', 'tests/unit', '-p', 'test_*.py']' returned non-zero exit status 1.</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>功能测试</td><td>82.8%</td><td>69.6%</td><td>通过</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>集成测试</td><td>74.0%</td><td>56.5%</td><td>通过</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>性能测试</td><td>49.4%</td><td>31.6%</td><td>错误: 覆盖率 45.0% 低于阈值 67.0%</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>单元测试</td><td>90.5%</td><td>87.2%</td><td>通过</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>功能测试</td><td>81.9%</td><td>77.2%</td><td>通过</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>集成测试</td><td>67.8%</td><td>64.2%</td><td>通过</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>性能测试</td><td>48.7%</td><td>29.9%</td><td>通过</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
     </tbody>
   </table>
   <p class='text-muted'>报告路径位于项目目录的 reports/ 子目录中。</p>
