add database management feature

--- a/reports/index.html
+++ b/reports/index.html
@@ -15,10 +15,10 @@
       <tr><th>测试类型</th><th>行覆盖率</th><th>分支覆盖率</th><th>结果</th><th>HTML报告</th></tr>
     </thead>
     <tbody>
-      <tr><td>单元测试</td><td>90.0%</td><td>85.0%</td><td>通过</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>功能测试</td><td>81.2%</td><td>78.0%</td><td>通过</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>集成测试</td><td>64.8%</td><td>62.8%</td><td>通过</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>性能测试</td><td>47.5%</td><td>31.4%</td><td>通过</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>单元测试</td><td>89.9%</td><td>85.1%</td><td>错误: 覆盖率 89.0% 低于阈值 90.0%</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>功能测试</td><td>75.2%</td><td>71.1%</td><td>错误: 覆盖率 74.0% 低于阈值 80.0%</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>集成测试</td><td>63.4%</td><td>60.4%</td><td>错误: 覆盖率 63.0% 低于阈值 67.0%</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>性能测试</td><td>48.4%</td><td>45.4%</td><td>错误: 覆盖率 48.0% 低于阈值 50.0%</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
     </tbody>
   </table>
   <p class='text-muted'>报告路径位于项目目录的 reports/ 子目录中。</p>
