improve test coverage

--- a/reports/index.html
+++ b/reports/index.html
@@ -15,10 +15,10 @@
       <tr><th>测试类型</th><th>行覆盖率</th><th>分支覆盖率</th><th>结果</th><th>HTML报告</th></tr>
     </thead>
     <tbody>
-      <tr><td>单元测试</td><td>90.6%</td><td>86.8%</td><td>通过</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>功能测试</td><td>81.4%</td><td>74.2%</td><td>通过</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>集成测试</td><td>63.1%</td><td>58.0%</td><td>错误: 覆盖率 62.0% 低于阈值 67.0%</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>性能测试</td><td>53.8%</td><td>49.5%</td><td>通过</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>单元测试</td><td>88.3%</td><td>85.9%</td><td>错误: 覆盖率 88.0% 低于阈值 90.0%</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>功能测试</td><td>79.9%</td><td>73.7%</td><td>错误: 覆盖率 78.0% 低于阈值 80.0%</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>集成测试</td><td>69.5%</td><td>63.3%</td><td>通过</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>性能测试</td><td>52.3%</td><td>48.6%</td><td>通过</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
     </tbody>
   </table>
   <p class='text-muted'>报告路径位于项目目录的 reports/ 子目录中。</p>
