implementing meso observation

--- a/reports/index.html
+++ b/reports/index.html
@@ -15,10 +15,10 @@
       <tr><th>测试类型</th><th>行覆盖率</th><th>分支覆盖率</th><th>结果</th><th>HTML报告</th></tr>
     </thead>
     <tbody>
-      <tr><td>单元测试</td><td>100.0%</td><td>100.0%</td><td>通过</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>功能测试</td><td>87.9%</td><td>78.6%</td><td>通过</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>集成测试</td><td>48.9%</td><td>26.2%</td><td>错误: 覆盖率 44.0% 低于阈值 67.0%</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
-      <tr><td>性能测试</td><td>45.4%</td><td>21.4%</td><td>错误: 覆盖率 40.0% 低于阈值 50.0%</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>单元测试</td><td>100.0%</td><td>100.0%</td><td>错误: Command '['/Users/xqu/Workspace/mirror/venv/bin/python', '-m', 'coverage', 'run', '--rcfile', '/Users/xqu/Workspace/mirror/.coveragerc', '--branch', '--source', 'services', '--source', 'models', '--source', 'utils', '-m', 'unittest', 'discover', '-s', 'tests/unit', '-p', 'test_*.py']' returned non-zero exit status 1.</td><td><a href='unit/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>功能测试</td><td>87.9%</td><td>78.6%</td><td>错误: Command '['/Users/xqu/Workspace/mirror/venv/bin/python', '-m', 'coverage', 'run', '--rcfile', '/Users/xqu/Workspace/mirror/.coveragerc', '--branch', '--source', 'models', '--source', 'routes', '--source', 'services', '--source', 'utils', '-m', 'unittest', 'discover', '-s', 'tests/functional', '-p', 'test_*.py']' returned non-zero exit status 1.</td><td><a href='functional/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>集成测试</td><td>48.9%</td><td>26.2%</td><td>错误: Command '['/Users/xqu/Workspace/mirror/venv/bin/python', '-m', 'coverage', 'run', '--rcfile', '/Users/xqu/Workspace/mirror/.coveragerc', '--branch', '--source', 'models', '--source', 'routes', '--source', 'services', '--source', 'utils', '-m', 'unittest', '-v', 'tests.integration.test_system_integration']' returned non-zero exit status 1.</td><td><a href='integration/htmlcov/index.html'>查看报告</a></td></tr>
+      <tr><td>性能测试</td><td>45.4%</td><td>21.4%</td><td>错误: Command '['/Users/xqu/Workspace/mirror/venv/bin/python', '-m', 'coverage', 'run', '--rcfile', '/Users/xqu/Workspace/mirror/.coveragerc', '--branch', '--source', 'models', '--source', 'routes', '--source', 'services', '--source', 'utils', '-m', 'unittest', 'discover', '-s', 'tests/performance', '-p', 'test_*.py']' returned non-zero exit status 1.</td><td><a href='performance/htmlcov/index.html'>查看报告</a></td></tr>
     </tbody>
   </table>
   <p class='text-muted'>报告路径位于项目目录的 reports/ 子目录中。</p>
